--- a/src/data/grammar/mtg/cards/mtg-cards.yaml
+++ b/src/data/grammar/mtg/cards/mtg-cards.yaml
@@ -47,7 +47,8 @@
   realHandCard: [
     "#realCard#",
     "#realCard#",
-    "#realCard#",
+    "#randomRealCard#",
+    "#randomRealCard#",
     "#realLandCard#",
     "#realLandCard#"
   ],
