--- a/src/data/grammar/images/svg-three-cards.yaml
+++ b/src/data/grammar/images/svg-three-cards.yaml
@@ -1,7 +1,7 @@
 ---
 imgClassifieds:
 - >
-  #pickThreeDiffCards#[_body:#headlineForSale##priceOffer#]
+  #pickThreeDiffCards#[_body:#headlineThreeCardsForSale##priceOffer#]
   #pickBigHeader##svgImgClassifieds#
 - >
   #pickThreeSameCard#[_body:#headlineOneCardForSale##priceOffer#]
@@ -14,7 +14,7 @@ imgClassifieds:
   #pickBigHeader##svgImgClassifieds#
 
 svgImgClassifieds: >
-  [#svgThemeColors#]#_header# #_body# {svg svgString=`#svg#`}
+  [#svgThemeColors#]#_header# #_body# {svg svgString=`#svgThreeCards#`}
 pickBigHeader: >
   [_header:#titleClassified#]
 titleClassified:
@@ -27,7 +27,7 @@ titleClassified:
 - GREAT VALUE
 - LOOK AT THESE CARDS
 - PREPARE YOUR BINDER
-headlineForSale:
+headlineThreeCardsForSale:
 - "#_card1#, #_card2#, and #_card3#"
 - "#_card1#, #_card2#, & #_card3#"
 - "#_card3# plus some other cards I found on the floor"
@@ -335,7 +335,7 @@ svgThemeColors:
   - "[_themeColor1:oldlace][_themeColor2:white][_svgComeOnStrokeColor:gold][_svgComeOnOpacity:0.2]"
   - "[_themeColor1:#d27f19][_themeColor2:#dbeeff][_svgComeOnStrokeColor:gold][_svgComeOnOpacity:0.2]"
 
-svg: |
+svgThreeCards: |
   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="700" height="420">
     <defs>
       <mask id="cardMask" maskUnits="userSpaceOnUse" mask-type="alpha">
