proper story headlines

--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -121,7 +121,7 @@ realization:
 - The Importance of [_thing:#randomAnyCard#,#cardCategory.s#,#creatureTypes.capitalize.s#,#gameConcept#]#_thing#
   in [_where:#format#,#recentCardSet#]#_where#
 - 'The Secret to #improvementGoal.capitalizeAll# is #deckChange.capitalize#'
-- "[_leadIn:In today's Magic Story,Magic Arcana,Exploring the Story,Story Time,Story Hour]#_leadIn#: 
+- "[_leadIn:In today's Magic Story,Story Arcana,Exploring the Story,Story Time,Story Hour]#_leadIn#: #magicStorylineHighlight#"
 - "#pro# Video Series: How I would [_change:improve,fix]#_change# [_improvable:Magic#colon# the Gathering,Magic Online,#format#,competitive Magic,#tournamentType# attendance]#_improvable# by #mtgOpinionSuggestion# #thing#, Part #num2-9#"
 - 'Preview of #teaserCardSet# #normalFormat#: will the new #deckVariation# deck be
   #deckDescription#?'
