--- a/src/data/grammar/headlines/flavor-text.yaml
+++ b/src/data/grammar/headlines/flavor-text.yaml
@@ -81,11 +81,38 @@ flavorText:
   - >
     "I [_forge:forge,shape,fashion,fabricate]#_forge# my #itemNoun.s# from the #abstractNoun# of my enemies." —#npcCharacter#
   - >
-    "It is #adjComparative# than all but the #adjSuperlative# #pluralNoun#, and #adjComparative# than all but the #adjSuperlative#."
+    "[_who:It,He,She]#_who# is #adjComparative# than all but the #adjSuperlative# #pluralNoun#, and #adjComparative# than all but the #adjSuperlative#."
+  - > 
+    "I am the #nounVerber#, the #sealInscriptionDescription#.\"  —[_inscription:Seal inscription,#itemNoun.capitalize# inscription]#_inscription#
+
+sealInscriptionDescriptionWhatIam:
+- "#itemNoun#"
+- "#adj# #itemNoun#"
+- "#characterClass#"
+- "#characterClass#"
+- "#emotion#"
+- "#abstractNoun#"
+- "#massNoun#"
+
+sealInscriptionDescriptionWhatIdo:
+- "#verbTransitive.s# the #adj#"
+- "#verbTransitive.s# the #pluralNoun#"
+- "#verbTransitive.s# all #pluralNoun#"
+- "#verbTransitive.s# all #abstractNounMassNounOrEmotion#"
+- "#verbTransitive.s# the #massNoun#"
+- "#verbTransitive.s# the final #itemNoun#"
+- "#verbTransitive.s# the [_adj:,#adj# ]#_adj##characterClass.s#"
+- "will not #verbIntransitive#"
+
+sealInscriptionDescription:
+  - "#sealInscriptionDescriptionWhatIam# that #sealInscriptionDescriptionWhatIdo#"
+  - "#sealInscriptionDescriptionWhatIam# that #sealInscriptionDescriptionWhatIdo#"
+  - "#sealInscriptionDescriptionWhatIam# that #sealInscriptionDescriptionWhatIdo#"
+  - "#sealInscriptionDescriptionWhatIam# that #sealInscriptionDescriptionWhatIdo#"
 
 newFlavorText:
-  - >
-    "The #creatureTypeOrCharacterClass.s# of [_place:#minorStoryLocation#,#nonPlaneLocation#]#_place# treat each #itemNoun# with #emotion# for the #creatureTypeOrCharacterClass# it will become."
+# - >
+#   "The #creatureTypeOrCharacterClass.s# of [_place:#minorStoryLocation#,#nonPlaneLocation#]#_place# treat each #itemNoun# with #emotion# for the #creatureTypeOrCharacterClass# it will become."
 
 placeOrPeopleVerbPluralAgreement:
 - "[_placeOrPeople:#placeNoun#][_verbs:#_verb.s#]"
