--- a/src/data/grammar/images/mtg-deck-tech.yaml
+++ b/src/data/grammar/images/mtg-deck-tech.yaml
@@ -73,6 +73,7 @@ svgDeckTechBackgroundImageUrl:
   - ../src/data/images/decktech/backgrounds/wall-of-stone.jpg
   - ../src/data/images/decktech/backgrounds/wirewood-elemental.jpg
   - ../src/data/images/decktech/backgrounds/wits-end.jpg
+  - ../src/data/images/decktech/backgrounds/ritual-of-rejuvenation.jpg
 
 svgDeckTechAccessoriesImageUrl: 
   - ../src/data/images/decktech/overlays/decktech-candyfinder-basic.png
