MTGO Twitter-style headline: blank of blank release events

--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -22,6 +22,7 @@ headline:
 - "#mtgComic#"
 - "#mtgDeckTechGraphic#"
 - "#cardCallout#"
+- "#mtgoTwitterStyleHeadline#"
 
 oncePerDay:
   - "#cotdImage#"
