--- a/src/data/grammar/images/mtg-single-card-callout.yaml
+++ b/src/data/grammar/images/mtg-single-card-callout.yaml
@@ -89,7 +89,7 @@ randomBgText:
   - "💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖[_lineHeight:1.3em][_debug:starheart]"
   - "💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯[_lineHeight:1.3em][_debug:100]"
   - "⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐[_lineHeight:1.3em][_debug:medium-star]"
-  # - "🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔[_lineHeight:1.3em][_debug:thinking]"
+  - "🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔[_lineHeight:1.3em][_debug:thinking]"
 
 pickRandomDegree: >
   [_rotationDeg:#_randomDegree#deg]
