--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -80,10 +80,15 @@
       "Yawgmoth#malePronouns#",
       "Zuul#femalePronouns#"
   ],
+  "characterFirstName": [
+    "#planeswalkerFirstName#",
+    "#commonCharacterFirstName#"
+  ],
   "commonCharacterFirstName": [
   	"Agathe",
   	"Borzard",
   	"Brigone",
+    "Brint",
     "Chaeska",
   	"Chadir",
   	"Devin",
@@ -100,6 +105,7 @@
   	"Juri",
   	"Maikal",
   	"Matoc",
+    "Meekus",
   	"Myznar",
   	"Naxtil",
   	"Nefara",
