venser comic - more text variety 2

--- a/src/data/grammar/headlines/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/headlines/mtg-card-of-the-day.yaml
@@ -366,6 +366,7 @@ historicalFigure:
   - Carl Sagan[_their:his]
   - Pagliacci[_their:his]
   - Orville Redenbacher[_their:his]
+  - Walter Cronkite[_their:his]
 
 causeOfDeath:
 - defenstration
